Jann 30/objects/CRS_Message__c.object
<CustomObject>
    <description>Used to send approval notification.</description>
    <fields>
        <fullName>CRS_Beverage_Category__c</fullName>
        <label>CRS Beverage Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRS_Brand__c</fullName>
        <label>CRS Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRS_Business_Unit__c</fullName>
        <label>CRS Business Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRS_Country_Names__c</fullName>
        <label>CRS Country Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Flavor_Names__c</fullName>
        <label>CRS Flavor Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Group__c</fullName>
        <label>CRS Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRS_Link__c</fullName>
        <label>CRS Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRS_Name__c</fullName>
        <label>CRS Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRS_Package_Size__c</fullName>
        <label>CRS Package Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRS_Package_Type_Names__c</fullName>
        <label>CRS Package Type Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Process_Flow__c</fullName>
        <label>CRS Process Flow</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRS_Product_Name__c</fullName>
        <label>CRS Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRS</label>
        <referenceTo>CRS__c</referenceTo>
        <relationshipLabel>CRS Messages</relationshipLabel>
        <relationshipName>CRS_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>High_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_Comment__c</fullName>
        <label>Notification Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>CRS Message</label>
    <nameField>
        <displayFormat>CMN-{000000}</displayFormat>
        <label>CRS Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRS Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>